--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 # Generated on crash by the VM
 erl_crash.dump
 
+/priv/certs
+
 # The config/prod.secret.exs file by default contains sensitive
 # data and you should not commit it into version control.
 #
